# design-patterns-python

./: .gitignore  README.md  pyproject.toml
python_design_patterns/creational/abstract_factory_pattern/autos/ford/: fiesta.py
python_design_patterns/creational/abstract_factory_pattern/factories/: abs_factory.py
python_design_patterns/creational/factory_pattern/full-factory/: __main__.py
python_design_patterns/creational/factory_pattern/full-factory/autos/: abs_auto.py  chevy_volt.py  ford_f150.py  nullcar.py
python_design_patterns/creational/factory_pattern/full-factory/factories/: abs_factory.py  chevy_factory.py  ford_factory.py  loader.py  null_factory.py
python_design_patterns/creational/factory_pattern/simple-factory/: __main__.py  autofactory.py
python_design_patterns/creational/factory_pattern/simple-factory/autos/: __init__.py  abs_auto.py  chevyvolt.py  maseratilevante.py  nullcar.py
