[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = ""
authors = ["Kenneth Mensah <kenneth.mensah220000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
